--- a/src/FckBrain.Tests/packages.config
+++ b/src/FckBrain.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Shouldly" version="2.8.2" targetFramework="net452" />
+  <package id="SonarAnalyzer.CSharp" version="1.18.0" targetFramework="net461" developmentDependency="true" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
