--- a/src/FckBrain.Tests/FckBrain.Tests.csproj
+++ b/src/FckBrain.Tests/FckBrain.Tests.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine\BufferTests.cs" />
     <Compile Include="Parser\CodeParserTests.cs" />
     <Compile Include="Engine\MemoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
