--- a/src/FckBrain.Engine/FckBrain.Engine.csproj
+++ b/src/FckBrain.Engine/FckBrain.Engine.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buffer.cs" />
     <Compile Include="IBuffer.cs" />
     <Compile Include="IMemory.cs" />
     <Compile Include="IState.cs" />
