Tests for Buffer

--- a/src/FckBrain.Engine/FckBrain.Engine.csproj
+++ b/src/FckBrain.Engine/FckBrain.Engine.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Buffer.cs" />
+    <Compile Include="EndOfBufferException.cs" />
     <Compile Include="IBuffer.cs" />
     <Compile Include="IMemory.cs" />
     <Compile Include="IState.cs" />
