Tests for Runner

--- a/src/FckBrain.Tests/FckBrain.Tests.csproj
+++ b/src/FckBrain.Tests/FckBrain.Tests.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\BufferTests.cs" />
+    <Compile Include="Engine\RunnerTests.cs" />
     <Compile Include="Parser\CodeParserTests.cs" />
     <Compile Include="Engine\MemoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
