Created project for example brainfuck code

--- a/src/FckBrain.Examples/FckBrain.Examples.csproj
+++ b/src/FckBrain.Examples/FckBrain.Examples.csproj
@@ -1,21 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E13E8B35-9045-46C7-9A98-456B5AF5A125}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{E561FB9B-8D47-4B08-B7F0-AA0DEFAF4BF4}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FckBrain.Console</RootNamespace>
-    <AssemblyName>FckBrain.Console</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>FckBrain.Examples</RootNamespace>
+    <AssemblyName>FckBrain.Examples</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -44,32 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Sources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FckBrain.Engine\FckBrain.Engine.csproj">
-      <Project>{60e2c45c-5e6c-4977-a51c-014dba47edb4}</Project>
-      <Name>FckBrain.Engine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FckBrain.Examples\FckBrain.Examples.csproj">
-      <Project>{e561fb9b-8d47-4b08-b7f0-aa0defaf4bf4}</Project>
-      <Name>FckBrain.Examples</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FckBrain.Parser\FckBrain.Parser.csproj">
-      <Project>{fb57e841-7d18-43cf-a79b-2cbbd4121274}</Project>
-      <Name>FckBrain.Parser</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="HelloWorld.bf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
